syntax = "proto3";

package me.jiangew.snippet.hazelcast.protobuf;

option java_package = "me.jiangew.snippet.hazelcast.protobuf";
option java_outer_classname = "FreezeProtos";

message Freeze {
    string orderId = 1;
    double amount = 2;
}

message Subaccount {
    string subAccountId = 1;
    double availableBalance = 2;
    string version = 3;
    map<string, Freeze> freeze = 4;

}

message SubaccountEntryProcessor {
    string orderId = 1;
    string subAccountId = 2;
    double balance = 3;
}
